Fix Copied popup for firefox
Firefox likes having a frame occur when the element is visible.
Chrome is cool with the element becoming invisible, and then showing it.
Make it work in both browsers.

10ms was inconsistent. 20ms was consistent. (17 ms is a frame length.)
I went with 35 ms, so it should catch 2 frames, usually.

--- a/static/style.css
+++ b/static/style.css
@@ -156,18 +156,19 @@ img.preview-comic {
 	opacity: 1;
 	transition: visibility 0s, opacity 0s;
 }
-.tooltip .triangle {
+.tooltip::before {
 	display: inline-block;
 	width: 0px;
-    height: 0px;
-    border: 6px solid transparent;
-    border-right-color: #000;
+	height: 0px;
+	border: 6px solid transparent;
+	border-right-color: #000;
+	content: '';
 }
-.tooltip .box {
-	display: inline-block;
+.tooltip .tooltip-content {
 	background-color: #000;
 	color: #fff;
-	padding: 0 0.25em;
+	display: inline-block;
+	padding: 0px 5px;
 }
 
 .main-page-header {
